--- a/chunk_includes/shared_intro1.html
+++ b/chunk_includes/shared_intro1.html
@@ -5,7 +5,7 @@
 </p>
 <p>
 
-Bine ati venit! În acest experiment, veți citi niște propoziții în limba română și veți răspunde apoi la niște întrebări legate de acceptabilitatea lor.</p>
+Bine ati venit! În acest experiment, veți citi niște propoziții în limba română și veți răspunde apoi la niște întrebări de înțelegere.</p>
 <p>
 Propozițiile pe care le citiți vă vor fi prezentate automat, cuvânt cu cuvânt, în ritmul pe care îl decideți dvs. Înainte de fiecare propoziție, veți vedea o cruce (+) pentru a indica faptul că o propoziție va începe curând. Când vedeți crucea, pregătiți-vă să citiți o propoziție! Propoziția va începe la o secundă după ce apare crucea.</p>
 
