--- a/chunk_includes/shared_intro3.html
+++ b/chunk_includes/shared_intro3.html
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-După ce aţi terminat de citit, veţi vedea o întrebare despre <b> propoziția pe care tocmai aţi citit-o </b>. Veți primi o întrebare despre puțin mai puțin de jumătate din propozițiile pe care le-ați citit. Fiecare întrebare are două răspunsuri posibile, unul la stânga și unul la dreapta. Puteți indica răspunsul dvs. apăsând "<b>f</b>" dacă credeți că răspunsul din <b> stânga </b> este corect și "<b>f</b>" dacă credeți că răspunsul din <b> dreapta </b> este corect.</p>
+După ce aţi terminat de citit, veţi vedea o întrebare despre <b> propoziția pe care tocmai aţi citit-o </b>. Veți primi o întrebare pentru puțin mai puțin de jumătate din propozițiile pe care le-ați citit. Fiecare întrebare are două răspunsuri posibile, unul la stânga și unul la dreapta. Puteți indica răspunsul dvs. apăsând "<b>f</b>" dacă credeți că răspunsul din <b> stânga </b> este corect și "<b>j</b>" dacă credeți că răspunsul din <b> dreapta </b> este corect.</p>
 <p>
 Pe parcursul experimentului, trebuie să vă mențineți întotdeauna mâinile poziționate astfel încât degetele mari să fie pe bara de spațiu, iar degetele arătătoare să fie pe tastele "f" și "j". Nu uitați, încercați să apăsați bara de spațiu suficient de rapid pentru a permite citirea relativ naturală a propoziției.</p>
 
